Add table with rowspan and colspan

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -25,5 +25,41 @@
       <td>Indianapolis</td>
       <td>6,633,053</td>
     </tr>
+<br>
+<br>
+<br>
+<hr>
+<br>
+  <table border='1'>
+    <tr>
+      <th>Column One</th>
+      <th>Column Two</th>
+      <th>Column Three</th>
+      <th>Column Four</th>
+    </tr>
+    <tr>
+      <td>Col 1 Row 1</td>
+      <td>cell</td>
+      <td>cell</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td rowspan='2'>Col 1 Row 2</td>
+      <td>&nbsp;</td>
+      <td>cell</td>
+      <td>cell</td>
+    </tr>
+    <tr>
+      <td>cell</td>
+      <td>cell</td>
+      <td>cell</td>
+    </tr>
+    <tr>
+      <td>cell</td>
+      <td>cell</td>
+      <td colspan='2'>Col 4 Row 3</td>
+    </tr>
+
+
 </body>
 </html>
