Add navigation to pages

--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -7,8 +7,9 @@
   <table>
     <tr>
       <th><a href='index.html'>Home</a></th>
-      <th><a href='spain.html'>Spain</a></th>
-      <th><a href='italy.html'>Italy</a></th>
+      <th><a href='product_details.html'>Products</a></th>
+      <th><a href='contact.html'>Contact</a></th>
+      <th><a href='legal/waiver.html'>Waiver</a></th>
     </tr>
   </table>
 </nav>
