--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -13,8 +13,9 @@
   <table>
     <tr>
       <th><a href='index.html'>Home</a></th>
-      <th><a href='product_details.html'>Spain</a></th>
-      <th><a href='contact.html'>Italy</a></th>
+      <th><a href='product_details.html'>Product</a></th>
+      <th><a href='contact.html'>Contact</a></th>
+      <th><a href='legal/waiver.html'>Waiver</a></th>
     </tr>
   </table>
 </footer>
