--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -3,6 +3,16 @@
 <head>
   <title>Legal Waiver</title>
 </head>
+<nav>
+  <table>
+    <tr>
+      <th><a href='index.html'>Home</a></th>
+      <th><a href='product_details.html'>Products</a></th>
+      <th><a href='contact.html'>Contact</a></th>
+      <th><a href='legal/waiver.html'>Waiver</a></th>
+    </tr>
+  </table>
+</nav>
 <body>
   <p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
 </body>
