Make relative links work

--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -6,9 +6,9 @@
 <nav>
   <table>
     <tr>
-      <th><a href='moon_bootz/index.html'>Home</a></th>
-      <th><a href='moon_bootz/product_details.html'>Products</a></th>
-      <th><a href='moon_bootz/contact.html'>Contact</a></th>
+      <th><a href='../index.html'>Home</a></th>
+      <th><a href='../product_details.html'>Products</a></th>
+      <th><a href='../contact.html'>Contact</a></th>
       <th><a href='waiver.html'>Waiver</a></th>
     </tr>
   </table>
