--- a/html/index.html
+++ b/html/index.html
@@ -36,3 +36,27 @@
    <footer></footer>
 </body>
 </html>
+
+
+<!--
+What is the purpose of HTML5 semantic tags?
+  + To give contextual and semantic meaning to your content. It is especially helpful if someone is using a website page reader because tags clearly organize your content.
+
+Which ones do you see as most useful?
+  + <main>, <header>, <footer>, <aside>
+
+What is the order the browser uses to display elements on a page?
+  + The browser uses the order you give it. (I think?)
+
+What did you learn about Sublime in this challenge?
+  + Snippets are so cool! I am excited to use them to make more boilerplate kind of templates to make coding more efficient.
+
+Do you think you'll create more handy snippets at a later date?
+  + Yes, although I'm not sure what they'll be just yet.
+
+What concept in this challenge was most difficult for you?
+  + Writing the basic html tags from memory. I had grown too dependent on the autocomplete.
+
+How can you improve your understanding of this concept?
+  + I can make an effort to write these tags out by hand until I know them better.
+//-->
