--- a/css/responsive/index.html
+++ b/css/responsive/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="practice.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Responsive Design and Fluid Layouts</title>
 </head>
