--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Wildflowers Article</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <section id="external-links">
@@ -12,7 +13,7 @@
       <li><a href="https://www.pinterest.com/pscheen/wildflowers/">Wildflower Gallery on Pinterest</a></li>
     </ul>
   </section>
-  <main>
+  <main id="maincontent">
     <h1>Wildflowers: The Hottest "Found Decor" Trend</h1>
     <figure>
       <img src="images/orange_flowers.jpg" alt="orange wildflowers">
