Add class to body tag

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <title>Octopus</title>
 </head>
-<body>
-<img src="images/hat.png">
-<img src="images/glasses.png">
-<img src="images/octopus.png">
+<body class="beautiful">
+  <img id="hat" src="images/hat.png">
+  <img id="glasses" src="images/glasses.png">
+  <img id="octopus" src="images/octopus.png">
 </body>
 </html>
